[package]
name = "miniscript"
version = "12.3.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>, Sanket Kanjalkar <sanket1729@gmail.com>"]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-miniscript/"
repository = "https://github.com/rust-bitcoin/rust-miniscript/"
description = "Miniscript: a subset of Bitcoin Script designed for analysis"
keywords = [ "crypto", "bitcoin", "miniscript", "script" ]
readme = "README.md"
edition = "2018"

[features]
default = ["std"]
std = ["bitcoin/std", "bitcoin/secp-recovery", "bech32/std"]
no-std = ["bech32/alloc"]
compiler = []
trace = []

serde = ["actual-serde", "bitcoin/serde"]
rand = ["bitcoin/rand"]
base64 = ["bitcoin/base64"]

[dependencies]
bech32 = { version = "0.11.0", default-features = false }
bitcoin = { git = "https://github.com/philipr-za/rust-bitcoin.git", branch = "philip-use-latest-secp256k1", default-features = false }

# Do NOT use this as a feature! Use the `serde` feature instead.
actual-serde = { package = "serde", version = "1.0.103", optional = true }

[dev-dependencies]
serde_test = "1.0.147"
bitcoin = { git = "https://github.com/philipr-za/rust-bitcoin.git", branch = "philip-use-latest-secp256k1", features = ["base64"] }
secp256k1 = { git = "https://github.com/jlest01/rust-secp256k1.git", package = "secp256k1", features = ["rand", "alloc"], rev = "b5558c5912b04018ec5339d88691009c754a2491"}

[[example]]
name = "htlc"
required-features = ["std", "compiler"]

[[example]]
name = "parse"
required-features = ["std"]

[[example]]
name = "sign_multisig"
required-features = ["std"]

[[example]]
name = "verify_tx"
required-features = ["std"]

[[example]]
name = "xpub_descriptors"
required-features = ["std"]

[[example]]
name = "taproot"
required-features = ["compiler","std"]

[[example]]
name = "psbt_sign_finalize"
required-features = ["std", "base64"]

[[example]]
name = "big"
required-features = ["std", "base64", "compiler"]

[workspace]
members = ["bitcoind-tests", "fuzz"]
exclude = ["embedded"]
